--- a/abstract.tex
+++ b/abstract.tex
@@ -15,8 +15,8 @@ with variant checks much more popular in the logic community.
 
 This thesis first addresses the porting and integration of the \emph{Time Stamped Tries} mechanism
 from the SLG-WAM tabling engine into the YapTab tabling engine. Our performance results show that our
-integration efforts were successful, with comparable speedups when using subsumptive-tabling against
-variant-tabling.
+integration efforts were successful, with comparable speedups when using subsumptive tabling against
+variant tabling.
 
 In the second part of this thesis we present the design, implementation, and evaluation of a novel extension
 based on subsumption-based tabling called \emph{Retroactive Call Subsumption} (RCS). RCS overcomes some limitations
