--- a/results.tex
+++ b/results.tex
@@ -234,7 +234,7 @@ The programs \textbf{left\_first},
 \textbf{right\_first} and \textbf{double\_first} all create the same number of subgoal trie nodes
 for all data sets. The \textbf{left\_first} program allocates a generator and one variant consumer,
 therefore only 3 subgoal trie nodes are needed.
-When using subsumptive-tabling, both the
+When using subsumptive tabling, both the
 programs \textbf{right\_first} and \textbf{double\_first} create subsumed consumers that are
 represented on the subgoal trie, but for variant-based tabling, these consumers are actually
 generators that are also represented in the subgoal trie. Because the two engines create the same
